--- a/Challenger/Base.lproj/Main.storyboard
+++ b/Challenger/Base.lproj/Main.storyboard
@@ -100,7 +100,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="jYm-l7-sw1" kind="relationship" relationship="viewControllers" id="aiB-CD-sB3"/>
-                        <segue destination="TW0-Ft-PUw" kind="relationship" relationship="viewControllers" id="weo-VH-pDg"/>
+                        <segue destination="JWp-VH-7Cb" kind="relationship" relationship="viewControllers" id="wTo-uo-v27"/>
                         <segue destination="PAB-ws-dWG" kind="relationship" relationship="viewControllers" id="fvB-VH-xSW"/>
                     </connections>
                 </tabBarController>
@@ -113,8 +113,11 @@
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DH7-JN-YPc" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="pageCurl" navigationOrientation="horizontal" spineLocation="min" id="JWp-VH-7Cb" customClass="ChallengePageViewController" customModule="Challenger" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="item " id="BGj-Cr-JmN" userLabel="PVC"/>
+                    <tabBarItem key="tabBarItem" title="Challenges" id="BGj-Cr-JmN" userLabel="PVC"/>
                     <navigationItem key="navigationItem" title="Title" id="vuB-wy-Szy"/>
+                    <connections>
+                        <segue destination="iox-ik-ekL" kind="presentation" identifier="toLoginVC" id="8rW-qg-vH3"/>
+                    </connections>
                 </pageViewController>
             </objects>
             <point key="canvasLocation" x="1504" y="277"/>
@@ -443,7 +446,7 @@
         <!--Challenges-->
         <scene sceneID="4OB-1g-i5c">
             <objects>
-                <viewController id="TW0-Ft-PUw" customClass="ChallengePrototypeViewController" customModule="Challenger" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ChallengeVC" id="TW0-Ft-PUw" customClass="ChallengePrototypeViewController" customModule="Challenger" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Fbb-8K-cUg"/>
                         <viewControllerLayoutGuide type="bottom" id="XpZ-lX-Dt2"/>
@@ -452,11 +455,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="4ob-ID-Ufw">
-                                <rect key="frame" x="0.0" y="20" width="600" height="440"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="4ob-ID-Ufw">
+                                <rect key="frame" x="0.0" y="20" width="600" height="533"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FOk-kp-Kqf">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="110"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="134"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IMX-jl-XHy">
                                                 <rect key="frame" x="233" y="0.0" width="134" height="134"/>
@@ -465,7 +468,7 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PQF-Y0-5qE">
-                                        <rect key="frame" x="0.0" y="110" width="600" height="110"/>
+                                        <rect key="frame" x="0.0" y="134" width="600" height="133"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Challenge Text" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sMb-uM-2m4">
                                                 <rect key="frame" x="104" y="32" width="392" height="69"/>
@@ -477,7 +480,7 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ldN-xW-Ptw">
-                                        <rect key="frame" x="0.0" y="220" width="600" height="110"/>
+                                        <rect key="frame" x="0.0" y="267" width="600" height="134"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Timer Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tix-hW-hpV">
                                                 <rect key="frame" x="104" y="32" width="392" height="69"/>
@@ -489,18 +492,18 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FsT-DO-kZC">
-                                        <rect key="frame" x="0.0" y="330" width="600" height="110"/>
+                                        <rect key="frame" x="0.0" y="400" width="600" height="133"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P6R-ji-YQw">
-                                                <rect key="frame" x="121" y="52" width="150" height="50"/>
-                                                <state key="normal" title="Decline"/>
-                                            </button>
                                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xqc-Nb-P7C">
                                                 <rect key="frame" x="361" y="52" width="150" height="50"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                                 <state key="normal" title="Go!">
                                                     <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 </state>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P6R-ji-YQw">
+                                                <rect key="frame" x="121" y="52" width="150" height="50"/>
+                                                <state key="normal" title="Decline"/>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -518,12 +521,16 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Challenges" id="Qbx-Ni-4Oq"/>
                     <connections>
-                        <segue destination="iox-ik-ekL" kind="presentation" identifier="toLoginVC" id="4w1-73-0kG"/>
+                        <outlet property="challengerTextLabel" destination="sMb-uM-2m4" id="rII-fR-RFT"/>
+                        <outlet property="declineButton" destination="P6R-ji-YQw" id="A02-NB-TE9"/>
+                        <outlet property="goButton" destination="Xqc-Nb-P7C" id="jcc-Gz-VsH"/>
+                        <outlet property="profileImageView" destination="IMX-jl-XHy" id="iX8-mL-LUv"/>
+                        <outlet property="timerLabel" destination="Tix-hW-hpV" id="IR5-cm-rNk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EhA-oe-49Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="710" y="-412"/>
+            <point key="canvasLocation" x="512" y="-456"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="5MJ-0h-62W">
@@ -545,6 +552,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="tkc-o2-xFP"/>
+        <segue reference="8rW-qg-vH3"/>
     </inferredMetricsTieBreakers>
 </document>
