--- a/Challenger/Base.lproj/Main.storyboard
+++ b/Challenger/Base.lproj/Main.storyboard
@@ -31,7 +31,7 @@
                                         <rect key="frame" x="0.0" y="28" width="600" height="81"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="735-wX-t6b" id="AQY-jZ-eHC">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="81"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="80.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bSh-Dj-cGx">
@@ -457,59 +457,82 @@
                                 <rect key="frame" x="0.0" y="20" width="600" height="533"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FOk-kp-Kqf">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="134"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="133.5"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IMX-jl-XHy">
-                                                <rect key="frame" x="233" y="0.0" width="134" height="134"/>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IMX-jl-XHy">
+                                                <rect key="frame" x="233" y="0.0" width="134" height="133.5"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="134" id="Tcq-kG-qV8"/>
+                                                </constraints>
                                             </imageView>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="IMX-jl-XHy" firstAttribute="top" secondItem="FOk-kp-Kqf" secondAttribute="top" id="4cy-aI-RLS"/>
+                                            <constraint firstItem="IMX-jl-XHy" firstAttribute="leading" secondItem="FOk-kp-Kqf" secondAttribute="leading" constant="233" id="Bsd-Qc-NRc"/>
+                                            <constraint firstAttribute="bottom" secondItem="IMX-jl-XHy" secondAttribute="bottom" id="DRp-Zw-uEO"/>
+                                            <constraint firstItem="IMX-jl-XHy" firstAttribute="top" secondItem="FOk-kp-Kqf" secondAttribute="top" id="evl-NQ-7ic"/>
+                                            <constraint firstAttribute="bottom" secondItem="IMX-jl-XHy" secondAttribute="bottom" id="lPt-Ag-1PV"/>
+                                            <constraint firstItem="IMX-jl-XHy" firstAttribute="centerX" secondItem="FOk-kp-Kqf" secondAttribute="centerX" id="ndz-QR-4VG"/>
+                                            <constraint firstAttribute="trailing" secondItem="IMX-jl-XHy" secondAttribute="trailing" constant="233" id="v3Z-wp-0bM"/>
+                                        </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PQF-Y0-5qE">
-                                        <rect key="frame" x="0.0" y="134" width="600" height="133"/>
+                                        <rect key="frame" x="0.0" y="133" width="600" height="133"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Challenge Text" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sMb-uM-2m4">
-                                                <rect key="frame" x="104" y="32" width="392" height="69"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Challenge Text" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sMb-uM-2m4">
+                                                <rect key="frame" x="8" y="8" width="584" height="117"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="sMb-uM-2m4" firstAttribute="leading" secondItem="PQF-Y0-5qE" secondAttribute="leadingMargin" id="Da3-vf-ul9"/>
+                                            <constraint firstItem="sMb-uM-2m4" firstAttribute="trailing" secondItem="PQF-Y0-5qE" secondAttribute="trailingMargin" id="KvS-bq-sBr"/>
+                                            <constraint firstItem="sMb-uM-2m4" firstAttribute="top" secondItem="PQF-Y0-5qE" secondAttribute="topMargin" id="eG2-0B-iLg"/>
+                                            <constraint firstItem="sMb-uM-2m4" firstAttribute="bottom" secondItem="PQF-Y0-5qE" secondAttribute="bottomMargin" id="mS4-0T-5XX"/>
+                                        </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ldN-xW-Ptw">
-                                        <rect key="frame" x="0.0" y="267" width="600" height="134"/>
+                                        <rect key="frame" x="0.0" y="266" width="600" height="133.5"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Timer Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tix-hW-hpV">
-                                                <rect key="frame" x="104" y="32" width="392" height="69"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Timer Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tix-hW-hpV">
+                                                <rect key="frame" x="8" y="8" width="584" height="117.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="Tix-hW-hpV" firstAttribute="leading" secondItem="ldN-xW-Ptw" secondAttribute="leadingMargin" id="EPJ-Zg-44G"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="Tix-hW-hpV" secondAttribute="trailing" id="GEW-Ms-TSG"/>
+                                            <constraint firstItem="Tix-hW-hpV" firstAttribute="top" secondItem="ldN-xW-Ptw" secondAttribute="topMargin" id="PXV-os-ubw"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="Tix-hW-hpV" secondAttribute="bottom" id="WUj-bS-18f"/>
+                                        </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FsT-DO-kZC">
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Cgi-F8-cvH">
                                         <rect key="frame" x="0.0" y="400" width="600" height="133"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xqc-Nb-P7C">
-                                                <rect key="frame" x="361" y="52" width="150" height="50"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P6R-ji-YQw">
+                                                <rect key="frame" x="0.0" y="0.0" width="300" height="133"/>
+                                                <state key="normal" title="Decline"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xqc-Nb-P7C">
+                                                <rect key="frame" x="300" y="0.0" width="300" height="133"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                                 <state key="normal" title="Go!">
                                                     <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 </state>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P6R-ji-YQw">
-                                                <rect key="frame" x="121" y="52" width="150" height="50"/>
-                                                <state key="normal" title="Decline"/>
-                                            </button>
                                         </subviews>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    </view>
+                                    </stackView>
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="4ob-ID-Ufw" firstAttribute="top" secondItem="Fbb-8K-cUg" secondAttribute="bottom" id="S6s-5S-CvH"/>
                             <constraint firstItem="4ob-ID-Ufw" firstAttribute="leading" secondItem="0yo-I4-Yrj" secondAttribute="leading" id="Tuu-px-f7m"/>
